force-app/main/default/objects/CFA_Coaching_Session__c/CFA_Coaching_Session__c.object-meta.xml
<CustomObject>

    <label>CFA Coaching Session</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFA Coaching Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 