force-app/main/default/objects/CFA_Coaching_Session__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>

    <description>Reference to the User (coach) for this session</description>
    <label>Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Coaching Sessions</relationshipLabel>
    <relationshipName>Coaching_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField> 