force-app/main/default/objects/CFA_Coaching_Session__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>

    <description>Reference to the Contact (customer) for this coaching session</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coaching Sessions</relationshipLabel>
    <relationshipName>Coaching_Sessions</relationshipName>

    <type>MasterDetail</type>
</CustomField> 