force-app/main/default/objects/CFA_Coaching_Session__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Duration of the coaching session in minutes</description>
    <label>Duration (Minutes)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 