force-app/main/default/objects/CFA_Coaching_Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Date and time of the coaching session</description>
    <label>Session Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 