force-app/main/default/objects/CFA_Coaching_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <description>Type of coaching session</description>
    <label>Session Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Consultation</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
                <default>true</default>
                <label>Follow-up</label>
            </value>
            <value>
                <fullName>Progress Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 