force-app/main/default/objects/CFA_Coaching_Session__c/fields/Stripe_Payment_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_ID__c</fullName>
    <description>Stripe Payment Intent ID for this session payment</description>
    <label>Stripe Payment Intent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 